--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700|Roboto:100,300,700');
-
 /* Reset */
 
 html {
@@ -21,7 +19,42 @@ img {
 /* Layout */
 
 .container {
-  margin: 0 20px;
+  margin: 0 25px;
+}
+
+/* Typographies */
+
+p {
+  font-family: 'Sans';
+  color: #707380;
+  font-weight: 540;
+  line-height: 1.5;
+  font-size: 1em;
+}
+
+h1 {
+  font-size: 2.5em;
+  color: #323648;
+}
+
+/* Components */
+
+    /* Buttons */
+
+.button {
+  width: 320px;
+  height: 60px;
+  color: white;
+  font-size: 0.9em;
+  font-weight: 600;
+  border: 0;
+  border-radius: 5px;
+  text-transform: uppercase;
+  margin: 20px 0;
+}
+
+.button.primary {
+  background-color: #3f46ad;
 }
 
  
@@ -51,45 +84,43 @@ header .nav-bar .burger-menu {
   float: right;
 }
 
-/* Section intro */ 
+/* Section Main */ 
 section.main {
-  margin-top: 100px;
+  padding-top: 100px;
 }
 
-h1 {
-  font-size: 2.5em;
-  color: #323648;
-}
-
-p {
-  font-family: 'Sans';
-  color: #707380;
-  font-weight: 540;
-  line-height: 1.5;
-}
-
-.button {
-  width: 320px;
-  height: 60px;
-  color: white;
-  font-size: 0.9em;
-  font-weight: 600;
-  border: 0;
-  border-radius: 5px;
-  text-transform: uppercase;
-  margin: 20px 0;
-}
-
-.button.blue {
-  background-color: #3f46ad;
-}
-
-.main img {
-  margin-top: 40px;
+section.main img {
+  margin: 40px 0;
 }
 
 /* Section - Work Guide */
 
+.work-guide-image {
+  width: 70px;
+}
+
+.work-guide h2 {
+  font-size: 1.7em;
+  color: #323648;
+}
+.work-guide h3 {
+  font-family: 'Sans';
+  color: #323648;
+  font-size: 1em;
+}
+
+.work-guide-link {
+  text-decoration: none;
+  text-align: center;
+  font-size: 0.9em;
+  color: #3f46ad;
+  font-weight: 550;
+  font-family: 'Sans';
+  border-bottom: 1px solid #3f46ad;
+  display: inline-block;
+}
+
+/*  De aquí para arriba lo que hizo Raúl */
 
 /*----  Section - News ...*/
 
@@ -116,3 +147,15 @@ footer img {
   float: right;
 }
 
+footer.news-footer {
+  overflow: hidden;
+}
+
+
+@media (min-width : 768px) {
+
+/* articulos uno al lado del otro */
+/* fotos irán en 4 y 1 */
+
+
+}
